[gd_scene load_steps=10 format=3 uid="uid://bqx8k2m5c7pfl"]

[ext_resource type="Script" uid="uid://b8tkts2eflbs1" path="res://scripts/post_process_controller.gd" id="1_post"]
[ext_resource type="Shader" path="res://assets/shaders/post_process/film_grain.gdshader" id="2_grain"]
[ext_resource type="Shader" path="res://assets/shaders/post_process/vignette.gdshader" id="3_vignette"]
[ext_resource type="Shader" path="res://assets/shaders/post_process/color_grading.gdshader" id="4_grading"]
[ext_resource type="Shader" path="res://assets/shaders/post_process/chromatic_aberration.gdshader" id="5_chromatic"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_grain"]
shader = ExtResource("2_grain")
shader_parameter/intensity = 0.15
shader_parameter/grain_size = 2.0
shader_parameter/colored_grain = false
shader_parameter/enable_scratches = false
shader_parameter/scratch_intensity = 0.3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vignette"]
shader = ExtResource("3_vignette")
shader_parameter/radius = 0.7
shader_parameter/softness = 0.4
shader_parameter/vignette_color = Color(0, 0, 0, 1)
shader_parameter/intensity = 1.0
shader_parameter/asymmetric = true
shader_parameter/center_offset = Vector2(0.02, -0.02)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_grading"]
shader = ExtResource("4_grading")
shader_parameter/preset = 0
shader_parameter/intensity = 1.0
shader_parameter/saturation = 1.0
shader_parameter/contrast = 1.0
shader_parameter/brightness = 0.0
shader_parameter/temperature = 0.0
shader_parameter/tint = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_chromatic"]
shader = ExtResource("5_chromatic")
shader_parameter/intensity = 0.003
shader_parameter/radial = true
shader_parameter/direction = Vector2(1, 0)

[node name="PostProcessing" type="CanvasLayer"]
layer = 100
script = ExtResource("1_post")

[node name="FilmGrain" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_grain")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Vignette" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_vignette")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorGrading" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_grading")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ChromaticAberration" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_chromatic")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
